# holistics_validation

./: .gitignore  .lefthook.yml  .markdownlint-cli2.yaml  .semgrep_settings.yml  .semgrepignore  .yamllint-config.yaml  README.md  pyproject.toml  ruff.toml
.circleci/: config.yml
.config/: mise.toml
.github/: CODEOWNERS  SECURITY.md  dependabot.yml
.github/actions/mise-install/: README.md  action.yml
.github/workflows/: ci.yml  gha-cache-cleanup.yml  security.yml
holistics_validation/: cli.py  exceptions.py  holistics_api_client.py  logger.py
holistics_validation/sql_engine_interfaces/: bigquery_interface.py
holistics_validation/tests/: utils.py
holistics_validation/tests/tooling/: test_publish_aml.py
holistics_validation/tests/validators/: test_aml_validator.py  test_dashboard_validator.py
holistics_validation/tooling/: publish_aml.py
holistics_validation/validators/: aml_validator.py  content_validator.py  dashboard_validator.py  reporting_validator.py  sql_validator.py
scripts/: bootstrap.sh  update.sh
scripts/utils/: .library.sh  check-file-details.sh  check-json.sh  check-merge-conflicts.sh  python-type-check.sh  sast.sh  secrets.sh
