[project]
name = 'holistics_validation'
version = '1.1.0'
description = 'A tool for validating holistics code'
readme = "README.md"
requires-python = '>=3.12'
keywords = [
    "Holistics",
    "AML",
    "CI",
    "continuous integration",
    "testing",
    "validation",
]

dependencies = [
    "google-cloud-bigquery>=3.41.0",
]

[tool.uv]
package = true
exclude-newer = "7 days"

[project.scripts]
holistics_validation = 'holistics_validation.cli:main'

[tool.setuptools]
py-modules = ["holistics_validation"]
