[project]
name = 'holistics_validation'
version = '1.2.0'
description = 'A tool for validating holistics code'
readme = "README.md"
requires-python = ">=3.14"
authors = [
    {name = "Spoiler Alert"}
]
keywords = [
    "Holistics",
    "AML",
    "CI",
    "continuous integration",
    "testing",
    "validation",
]

dependencies = [
    "google-cloud-bigquery>=3.41.0",
]

[tool.uv]
package = true
exclude-newer = "7 days"

[tool.setuptools]
py-modules = ["holistics_validation"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[project.scripts]
holistics_validation = 'holistics_validation.cli:main'

[tool.ruff]
line-length = 160
exclude = [
  ".cache",
  "venv",
  "__pycache__",
]
